Singleton design pattern added to mappers and some codes configured