@@ -2,8 +2,6 @@ package com.flightinquiry.service;
 
 import com.flightinquiry.model.entity.Airport;
 import com.flightinquiry.model.entity.Flight;
-import com.flightinquiry.model.mapper.FlightMapper;
-import com.flightinquiry.repository.AirportRepository;
 import com.flightinquiry.repository.FlightRepository;
 import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
@@ -11,7 +9,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,35 +16,32 @@ import java.util.stream.Collectors;
 public class SearchService {
 
     private final FlightRepository flightRepository;
-    private final AirportRepository airportRepository;
 
     public List<Flight> searchFlightsWithParams(
             LocalDateTime departureDate,
             @Nullable LocalDateTime returnDate,
-            String departureAirport,
-            String arrivalAirport) {
-        Optional<Airport> departure = airportRepository.findByCity(departureAirport);
-        Optional<Airport> arrival = airportRepository.findByCity(arrivalAirport);
+            Airport departureAirport,
+            Airport arrivalAirport) {
+
 
         List<Flight> flights = flightRepository
-                .findFlightsByDepartureAirportAndArrivalAirport(departure.get(), arrival.get());
-
-        flights.stream()
-                .filter(flight -> !flight.getDepartureDate().isBefore(departureDate) || flight.getDepartureDate().isEqual(departureDate))
-                .map(FlightMapper::toDto)
+                .findFlightsByDepartureAirportAndArrivalAirport(departureAirport, arrivalAirport)
+                .stream()
+                .filter(flight -> !flight.getDepartureDate().isBefore(departureDate) ||
+                        flight.getDepartureDate().isEqual(departureDate))
                 .collect(Collectors.toList());
-        if (returnDate == null) {
 
+        if (returnDate == null) {
             return flights;
-        }else {
+        } else {
+
 
             List<Flight> returnFlights = flightRepository
-                    .findFlightsByDepartureAirportAndArrivalAirport(arrival.get(),departure.get());
-
-            returnFlights.stream()
-                    .filter(flight -> !flight.getDepartureDate().isAfter(returnDate) || flight.getDepartureDate().isEqual(returnDate))
-                    .map(FlightMapper::toDto)
-                    .collect(Collectors.toList());
+                    .findFlightsByDepartureAirportAndArrivalAirport(arrivalAirport,departureAirport )
+                    .stream()
+                    .filter(flight -> !flight.getDepartureDate().isAfter(returnDate) ||
+                            flight.getDepartureDate().isEqual(returnDate))
+                    .toList();
 
             flights.addAll(returnFlights);
 
